--- a/index.html
+++ b/index.html
@@ -464,6 +464,36 @@
         </ul>
       </div>
 
+      <!-- Subscribe -->
+      <div class="section-subscribe">
+
+        <p class="subscribe-footer">Subscribe</p>
+
+        <form action="">
+
+          <div class="form-field-footer">
+
+            <input class="input-footer" type="text" name="e-mail" placeholder="E-mail">
+
+            <button class="foter-button" type="button">
+              Subscribe
+
+              <svg class="footer-icon-btn">
+                <use href="./images/icons.svg#icon-send"></use>
+
+              </svg>
+            </button>
+
+          </div>
+
+
+      </div>
+
+
+
+
+      </form>
+
     </div>
   </footer>
 
@@ -478,7 +508,59 @@
           </svg>
         </div>
       </button>
+
+      <p class="modal-paragraph">Leave your contacts and we will call you back</p>
+
+      <div class="form-field">
+        <label for="user-name">Name</label>
+
+        <div class="input-svg">
+          <input type="text" name="name" id="user-name">
+
+          <svg class="icon-form" height="18px" width="18px">
+            <use href="./images/icons.svg#icon-name"></use>
+          </svg>
+
+        </div>
+
+      </div>
+
+
+
+      <div class="form-field">
+        <label for="user-phone">Phone</label>
+
+        <div class="input-svg">
+          <input type="text" type="tel" name="tel" id="user-phone">
+
+          <svg class="icon-form" height="24px" width="18px">
+            <use href="./images/icons.svg#icon-phone"></use>
+          </svg>
+
+        </div>
+      </div>
+
+      <div class="form-field">
+        <label for="user-email">Email</label>
+
+        <div class="input-svg">
+          <input type="text" type="email" name="email" id="user-email">
+
+          <svg class="icon-form" height="24px" width="18px">
+            <use href="./images/icons.svg#icon-email"></use>
+          </svg>
+
+        </div>
+      </div>
+
+
+      <div class="form-field">
+        <label for="user-comment">Comment</label>
+        <textarea name="comment" id="user-comment" placeholder="Text input"></textarea>
+      </div>
+
     </div>
+
   </div>
 
 
