--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,8 @@
     https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
     " rel="stylesheet">
 
-    <link rel="stylesheet" href="./scc/styles.css">
+
+    <link rel="stylesheet" href="./css/styles.css">
 
     <!--font-family-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
