--- a/portfolio.html
+++ b/portfolio.html
@@ -346,8 +346,40 @@
                 </ul>
             </div>
 
+            <!-- Subscribe -->
+            <div class="section-subscribe">
+
+                <p class="subscribe-footer">Subscribe</p>
+
+                <form action="">
+
+                    <div class="form-field-footer">
+
+                        <input class="input-footer" type="text" name="e-mail" placeholder="E-mail">
+
+                        <button class="foter-button" type="submit">
+                            Subscribe
+
+                            <svg class="footer-icon-btn">
+                                <use href="./images/icons.svg#icon-send"></use>
+
+                            </svg>
+                        </button>
+
+                    </div>
+
+
+            </div>
+
+
+
+
+            </form>
+
         </div>
     </footer>
+
+
 
 
 
