--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 
             <input class="input-footer" type="text" name="e-mail" placeholder="E-mail">
 
-            <button class="foter-button" type="button">
+            <button class="foter-button" type="submit">
               Subscribe
 
               <svg class="footer-icon-btn">
@@ -509,57 +509,83 @@
         </div>
       </button>
 
-      <p class="modal-paragraph">Leave your contacts and we will call you back</p>
+      <form action="">
+        <p class="modal-paragraph">Leave your contacts and we will call you back</p>
 
-      <div class="form-field">
-        <label for="user-name">Name</label>
+        <div class="form-field">
+          <label for="user-name">Name</label>
 
-        <div class="input-svg">
-          <input type="text" name="name" id="user-name">
+          <div class="input-svg">
+            <input type="text" name="name" id="user-name" autofocus>
 
-          <svg class="icon-form" height="18px" width="18px">
-            <use href="./images/icons.svg#icon-name"></use>
-          </svg>
+            <svg class="icon-form" height="18px" width="18px">
+              <use href="./images/icons.svg#icon-name"></use>
+            </svg>
 
-        </div>
-
-      </div>
-
-
-
-      <div class="form-field">
-        <label for="user-phone">Phone</label>
-
-        <div class="input-svg">
-          <input type="text" type="tel" name="tel" id="user-phone">
-
-          <svg class="icon-form" height="24px" width="18px">
-            <use href="./images/icons.svg#icon-phone"></use>
-          </svg>
+          </div>
 
         </div>
-      </div>
 
-      <div class="form-field">
-        <label for="user-email">Email</label>
 
-        <div class="input-svg">
-          <input type="text" type="email" name="email" id="user-email">
 
-          <svg class="icon-form" height="24px" width="18px">
-            <use href="./images/icons.svg#icon-email"></use>
-          </svg>
+        <div class="form-field">
+          <label for="user-phone">Phone</label>
 
+          <div class="input-svg">
+            <input type="text" type="tel" name="tel" id="user-phone">
+
+            <svg class="icon-form" height="24px" width="18px">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+
+          </div>
         </div>
-      </div>
+
+        <div class="form-field">
+          <label for="user-email">Email</label>
+
+          <div class="input-svg">
+            <input type="text" type="email" name="email" id="user-email">
+
+            <svg class="icon-form" height="24px" width="18px">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+
+          </div>
+        </div>
 
 
-      <div class="form-field">
-        <label for="user-comment">Comment</label>
-        <textarea name="comment" id="user-comment" placeholder="Text input"></textarea>
-      </div>
+        <div class="form-field">
+          <label for="user-comment">Comment</label>
+          <textarea name="comment" id="user-comment" placeholder="Text input"></textarea>
+        </div>
+
+
+
+
+        <label class="chechbox-label" for="privacy-policy">
+
+          <div class="chechbox-container">
+            <input class="chechbox" type="checkbox" name="privacy-policy" id="privacy-policy">
+
+
+            <svg class="chechbox-icon" height="16px" width="16px">
+              <use href="./images/icons.svg#icon-check-mark"></use>
+            </svg>
+
+
+            I accept the terms and conditions of the
+            <a class="checkbox-link" href="#">Privacy Policy</a>
+
+        </label>
+
+      </form>
 
     </div>
+
+    <button class="button-modal" type="submit">Send</button>
+
+  </div>
 
   </div>
 
