--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
       </div>
 
     </section>
+
+    <!-- features -->
     <section class="features">
       <div class="container">
 
@@ -139,6 +141,8 @@
         </ul>
       </div>
     </section>
+
+    <!-- about -->
     <section class="about">
       <div class="container">
         <h2 class="section-title">What are we doing</h2>
@@ -336,6 +340,9 @@
         </ul>
       </div>
     </section>
+
+
+    <!-- Customers -->
     <section class="Customers">
       <div class="container">
 
