--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 
           <div class="form-field-footer">
 
-            <input class="input-footer" type="text" name="e-mail" placeholder="E-mail">
+            <input class="input-footer" type="e-mail" name="e-mail" placeholder="E-mail">
 
             <button class="foter-button" type="submit">
               Subscribe
@@ -563,7 +563,7 @@
         </div>
 
 
-        <div class="form-field">
+        <div class="form-field textarea">
           <label for="user-comment">Comment</label>
           <textarea name="comment" id="user-comment" placeholder="Text input"></textarea>
         </div>
@@ -582,7 +582,7 @@
             </svg>
 
 
-            I accept the terms and conditions of the
+            <span>I accept the terms and conditions of the</span>
             <a class="checkbox-link" href="#">Privacy Policy</a>
 
         </label>
