--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 
           <div class="form-field-footer">
 
-            <input class="input-footer" type="e-mail" name="e-mail" placeholder="E-mail">
+            <input class="input-footer" type="email" name="email" placeholder="E-mail">
 
             <button class="foter-button" type="submit">
               Subscribe
